# mquickjs-hs

./: .gitignore  ChangeLog.md  README.md  flake.nix  makefile  mquickjs-hs.cabal  stack.yaml
.github/workflows/: cabal.yml  main.yml
mquickjs/: stdlib_wrapper.c
src/: MQuickJS.hs
src/MQuickJS/: Error.hs  Types.hsc
test/: Spec.hs
