
cabal-version:  1.12
name:           mquickjs-hs
version:        0.1.2.4
homepage:       https://github.com/goodlyrottenapple/mquickjs-hs#readme
bug-reports:    https://github.com/goodlyrottenapple/mquickjs-hs/issues
author:         Sam Balco
maintainer:     goodlyrottenapple@gmail.com
copyright:      2020 Sam Balco
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md
category:       JavaScript
synopsis:       Wrapper for the Micro QuickJS JavaScript Engine
description:
    This library is a wrapper for
    [Micro QuickJS](https://github.com/bellard/mquickjs),
    a compact JavaScript Engine.
    .
    To get started, see the Readme below.

extra-source-files:
    mquickjs/*.h

source-repository head
  type: git
  location: https://github.com/goodlyrottenapple/mquickjs-hs

library
  exposed-modules:
      MQuickJS, MQuickJS.Types, MQuickJS.Error
  other-modules:
      Paths_mquickjs_hs
  hs-source-dirs:
      src
  build-depends:
    aeson                >=2.0   && <2.3,
    base                 >=4.11  && <5,
    bytestring           >=0.10  && <0.13,
    containers           >=0.5   && <0.8,
    exceptions           >=0.8   && <0.11,
    inline-c             >=0.5   && <0.10,
    mtl                  >=2.2.2 && <2.4,
    scientific           >=0.3.5 && <0.4,
    string-conv          >=0.1.2 && <0.3,
    text                 >=1.2.0 && <2.2,
    time                 >=1.8   && <1.14,
    transformers         >=0.5   && <0.7,
    unliftio-core        >=0.1   && <0.3,
    unordered-containers >=0.2.8 && <0.3,
    vector               >=0.12  && <0.14

  default-language: Haskell2010
  include-dirs: mquickjs
  c-sources:
      mquickjs/cutils.c
    , mquickjs/dtoa.c
    , mquickjs/libm.c
    , mquickjs/mquickjs.c
    , mquickjs/stdlib_wrapper.c
  includes:
       mquickjs/mquickjs.h
  install-includes:
       mquickjs/mquickjs.h
  cc-options:
    -static -D_GNU_SOURCE -include stddef.h

test-suite mquickjs-hs-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:    Paths_mquickjs_hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , mquickjs-hs          -any
    , aeson
    , exceptions
    , HUnit                >=1.6.0.0
    , QuickCheck           >=2.9
    , tasty                >=1.0
    , tasty-hunit          >=0.10
    , tasty-quickcheck     >=0.9
    , text
    , unordered-containers
    , vector
